--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
         </div>
       </div>
-      <video src="video.mp4" class="head-video" id="my" muted loop autoplay></video>
+      <video src="video.mp4" class="head-video" id="my" muted autoplay></video>
       <p class="gg"></p>
       <p class="kzromulc romul" >Біз жайлы:</p>
       <p class="kzmoumenta moumen">Naqty.kz – той, сүндет той, туған күн сияқты ерекше сәттерге арналған онлайн шақыру сайттарын жасайтын заманауи сервис.</p>
