--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
   </div>
 
-  <footer>
+<!--   <footer>
     <p class="lora">©2025 все права защищены</p>
     <div class="sot">
       <a href="https://www.tiktok.com/@naqty.kz_"><img src="image/tiktok.jpg" alt="TikTok"></a>
@@ -330,7 +330,7 @@
       <a href="/"><img src="image/instagram.jpg" alt="Instagram"></a>
       <p class="alice">CREATED BY <br>NAQTY.KZ</p>
     </div>
-  </footer>
+  </footer> -->
   
 
     
