--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 </div>
         </div>
       </div>
+        <video autoplay muted playsinline class="head-video" id="my">
+            <source src="video.mp4" type="video/mp4">
+        </video>
       <video src="video.mp4" class="head-video" id="my" muted autoplay playsinline></video>
       <p class="gg"></p>
       <p class="kzromulc romul" >Біз жайлы:</p>
