--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
         </div>
       </div>
-        <video autoplay muted playsinline class="head-video" id="my">
+        <video loop autoplay muted playsinline class="head-video" id="my">
             <source src="video.mp4" type="video/mp4">
         </video>
       
